cambios en los index
index de boletas y clientes

--- a/app/views/bolets/index.html.erb
+++ b/app/views/bolets/index.html.erb
@@ -1,4 +1,4 @@
-<center><h1>Listing Bolets</h1>
+<center><h1> Boletas</h1>
 
 <table class="table table-condensed" id="contenedor">
 
@@ -44,5 +44,5 @@
 <br>
 <button type="button" class="btn btn-default btn-xs">
 <span class="glyphicon glyphicon-plus" ></span>
-<%= link_to 'New Bolet', new_bolet_path %>
+<%= link_to 'Nueva Boleta', new_bolet_path %>
   </button>
