--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<center><h1>Listing Clientes</h1>
+<center><h1> Clientes</h1>
 
 <table class="table table-condensed" id="contenedor">
   <thead>
@@ -49,5 +49,5 @@
 <br>
 <button type="button" class="btn btn-default btn-xs">
 <span class="glyphicon glyphicon-plus" ></span>
-<%= link_to 'New Cliente', new_cliente_path %>
+<%= link_to 'Nuevo Cliente', new_cliente_path %>
   </button>
