--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -10,28 +10,28 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :rut %><br>
+  <div align="center" >
+  <div align="left" class="field">
+      <%= f.label :rut %><br>
     <%= f.text_field :rut %>
   </div>
-  <div class="field">
+    <div align="left" class="field">
     <%= f.label :nombre %><br>
     <%= f.text_field :nombre %>
   </div>
-  <div class="field">
+  <div align="left" class="field">
     <%= f.label :apellido %><br>
     <%= f.text_field :apellido %>
   </div>
-  <div class="field">
+    <div align="left" class="field">
     <%= f.label :direccion %><br>
     <%= f.text_field :direccion %>
   </div>
-  <div class="field">
+    <div align="left" class="field">
     <%= f.label :correo %><br>
     <%= f.text_field :correo %>
   </div>
-  <div class="field">
+    <div align="left" class="field">
     <%= f.label :fono %><br>
     <%= f.number_field :fono %>
   </div>
