--- a/app/views/equipos/_form.html.erb
+++ b/app/views/equipos/_form.html.erb
@@ -10,12 +10,12 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  <div align="center" >
+  <div align="left" class="field">
     <%= f.label :codequipo %><br>
     <%= f.text_field :codequipo %>
   </div>
-  <div class="field">
+  <div align="left" class="field">
     <%= f.label :tipo %><br>
     <%= f.text_field :tipo %>
   </div>
