--- a/app/views/repuesto_bolets/new.html.erb
+++ b/app/views/repuesto_bolets/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Repuesto Bolet</h1>
+<center>
+<h1>Nuevo Detalle Boleta</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', repuesto_bolets_path %>
+<center>
+<button type="button" class="btn btn-default btn-xs">
+<span class="glyphicon glyphicon-arrow-left" ></span>
+<%= link_to 'Atras', repuesto_bolets_path %>
+</button>
