--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,7 +27,14 @@
      text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 
  }
+ #vista
+  {
+     width:25%;
+     font-size: 17px;
+      color:orange;
+      text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 
+  }
 #info
 {
   font-size: 16px;
@@ -48,9 +55,11 @@
        }
 .field
 {
+  width:25%;
   font-size: 17px;
-  color: #077219;
+   color:orange;
    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+
 }
 .posision{
   margin-left: auto;
