--- a/app/views/bolets/index.html.erb
+++ b/app/views/bolets/index.html.erb
@@ -4,7 +4,7 @@
 
   <thead >
     <tr>
-      <th>Numboleta</th>
+      <th>Num. Boleta</th>
       <th>Fecha</th>
       <th>Cliente</th>
       <th colspan="3"></th>
@@ -20,19 +20,19 @@
         <td >
           <button type="button" class="btn btn-default btn-xs">
           <span class="glyphicon glyphicon-eye-open"  ></span>
-          <%= link_to 'Show', bolet %>
+          <%= link_to 'Mostrar', bolet %>
         </button> </td>
 
-        <% if current_usuario.cargo == "administrador" %>
+        <% if current_usuario.email == "miguel@gmail.com" %>
         <td>
           <button type="button" class="btn btn-default btn-xs">
           <span class="glyphicon glyphicon-pencil" ></span>
-          <%= link_to 'Edit', edit_bolet_path(bolet) %>
+          <%= link_to 'Editar', edit_bolet_path(bolet) %>
         </button></td>
         <td >
           <button type="button" class="btn btn-default btn-xs">
           <span class="glyphicon glyphicon-trash" ></span>
-          <%= link_to 'Destroy', bolet, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to 'Eliminar', bolet, method: :delete, data: { confirm: 'Are you sure?' } %>
           </button></td>
         <% end %>
       </tr>
