--- a/app/views/bolets/new.html.erb
+++ b/app/views/bolets/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Bolet</h1>
+<center>
+<h1>Nueva Boleta</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', bolets_path %>
+
+<button type="button" class="btn btn-default btn-xs">
+<span class="glyphicon glyphicon-arrow-left" ></span>
+<%= link_to 'Atras', bolets_path %>
+</button>
