--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Cliente</h1>
+<h1>Editar Cliente</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @cliente %> |
-<%= link_to 'Back', clientes_path %>
+<button type="button" class="btn btn-default btn-xs" >
+<span class="glyphicon glyphicon-eye-open"  ></span>
+<%= link_to 'Mostrar', @cliente %> 
+</button>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+<button type="button" class="btn btn-default btn-xs">
+<span class="glyphicon glyphicon-arrow-left" ></span>
+<%= link_to 'Atras', clientes_path %>
+</button>
