--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Cliente</h1>
+<center>
+<h1>Nuevo Cliente</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', clientes_path %>
+<center>
+<button type="button" class="btn btn-default btn-xs">
+<span class="glyphicon glyphicon-arrow-left" ></span>
+<%= link_to 'Atras', clientes_path %>
+</button>
