--- a/app/views/equipos/edit.html.erb
+++ b/app/views/equipos/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Equipo</h1>
+<div align="center" >
+<h1>Editar Equipo</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @equipo %> |
-<%= link_to 'Back', equipos_path %>
+<button type="button" class="btn btn-default btn-xs" >
+<span class="glyphicon glyphicon-eye-open"  ></span>
+<%= link_to 'Mostrar', @equipo %>
+</button>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+<button type="button" class="btn btn-default btn-xs">
+<span class="glyphicon glyphicon-arrow-left" ></span>
+<%= link_to 'Atras', equipos_path %>
+</button>
