--- a/app/views/equipos/new.html.erb
+++ b/app/views/equipos/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Equipo</h1>
+<center>
+<h1>Nuevo Equipo</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', equipos_path %>
+<center>
+<button type="button" class="btn btn-default btn-xs">
+<span class="glyphicon glyphicon-arrow-left" ></span>
+<%= link_to 'Atras', equipos_path %>
+</button>
