--- a/app/views/repuesto_bolets/edit.html.erb
+++ b/app/views/repuesto_bolets/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Repuesto Bolet</h1>
+<div align="center" >
+<h1>Editar Detalle Boleta</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @repuesto_bolet %> |
-<%= link_to 'Back', repuesto_bolets_path %>
+<button type="button" class="btn btn-default btn-xs" >
+<span class="glyphicon glyphicon-eye-open"  ></span>
+<%= link_to 'Mostrar', @repuesto_bolet %>
+</button>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+<button type="button" class="btn btn-default btn-xs">
+<span class="glyphicon glyphicon-arrow-left" ></span>
+<%= link_to 'Atras', repuesto_bolets_path %>
+</button>
