--- a/app/views/repuestos/_form.html.erb
+++ b/app/views/repuestos/_form.html.erb
@@ -11,24 +11,26 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :codrepuesto %><br>
+    <div align="center" >
+  <div align="left" class="field">
+    <%= f.label :codrepuesto %>
     <%= f.text_field :codrepuesto %>
   </div>
-  <div class="field">
+  <div align="left" class="field">
     <%= f.label :nombrerepuesto %><br>
     <%= f.text_field :nombrerepuesto %>
   </div>
-  <div class="field">
+  <div  align="left"class="field">
     <%= f.label :valorrepuesto %><br>
     <%= f.number_field :valorrepuesto %>
   </div>
-  <div class="field">
+  <div align="left" class="field">
     <%= f.label :equipo_id %><br>
     <%= f.select( "equipo_id",Equipo.all.collect{|l| [ l.codequipo, l.id ] }, {include_blank: 'Seleccione equipo'})  %>
-    
   </div>
-  <div class="actions">
+  <div  class="actions">
     <%= f.submit %>
   </div>
+  </div>
+
 <% end %>
