--- a/app/views/repuestos/edit.html.erb
+++ b/app/views/repuestos/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Repuesto</h1>
+<div align="center" >
+<h1>Editar Repuesto</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @repuesto %> |
-<%= link_to 'Back', repuestos_path %>
+<button type="button" class="btn btn-default btn-xs" >
+<span class="glyphicon glyphicon-eye-open"  ></span>
+<%= link_to 'Mostrar', @repuesto %>
+</button>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+<button type="button" class="btn btn-default btn-xs">
+<span class="glyphicon glyphicon-arrow-left" ></span>
+<%= link_to 'Atras', repuestos_path %>
+</button>
